# STW

./: CMakeLists.txt  README.md  main.cpp
lab1/: README.md  main.cpp
lab2/: README.md  child1.cpp  child2.cpp  main.cpp
lab3/: README.md  main.cpp  matrix_operations.cpp  matrix_operations.h
